corrected formatting/layout on mobile

--- a/template/css/main.css
+++ b/template/css/main.css
@@ -57,3 +57,6 @@
 .markdown-spacer {
     margin-top: 1em;
 }
+.main-content {
+    padding: 0 1em;
+}
